[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pyMechOpt"
version = "0.0.1"
authors = [
  { name="Di Sihan", email="dsh@buaa.edu.cn" },
]
description = "A Python toolbox for optimizing chemical reaction mechanisms"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "pymoo>=0.6.0.0",
    "cantera>=3.0.0",
]

#[project.urls]
#"Homepage" = "https://github.com/pypa/sampleproject"
#"Bug Tracker" = "https://github.com/pypa/sampleproject/issues"
